# FileGen

./: .gitignore  MANIFEST.in  README.md  install.sh  main.py  pyproject.toml  setup.py
src/: cli.py
src/generator/: directory_manager.py  file_generator.py
src/parser/: chatgpt_parser.py  markdown_parser.py  structure_builder.py  structure_parser.py
src/utils/: exceptions.py  logger.py
src/validator/: validator.py
tests/: __init__.py  test_generator.py  test_parser.py
tests/fixtures/: sample.md
