[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filegen"
version = "0.1.2"
description = "Simple file and folder generator from Markdown"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GNU GPL"}
dependencies = [
    "colorama>=0.4.6",
    "setuptools>=80.9.0",
    "stdeb>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
]

[project.scripts]
filegen = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.parser", "src.generator", "src.validator", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
